<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">


    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_sources_name_default"
        android:entries="@array/settings_sources_label"
        android:entryValues="@array/settings_sources_value"
        android:key="@string/settings_source_name"
        android:title="@string/settings_sources_name" />


</PreferenceScreen>