<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/etext_email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:nextFocusDown="@id/etext_password"
            android:autofillHints="" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etext_password"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:nextFocusDown="@id/btn_reset_password"
            android:nextFocusUp="@id/etext_email"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:nextFocusDown="@id/btn_login"
        android:nextFocusUp="@id/etext_email"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#6A524040"
        android:text="@string/btn_login"
        android:nextFocusDown="@id/btn_signup"
        android:nextFocusUp="@id/btn_reset_password"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="#6B524040"
        android:text="@string/btn_link_signup"
        android:nextFocusUp="@id/btn_login"
        android:textColor="@color/White" />
</LinearLayout>
